# ss_prep_260417

./: .gitignore  STATUS.md  TESTING.md  setup.sh
dg/: dg5f_hand.repos
dg/dg5f_contact_viz/: package.xml  setup.cfg  setup.py
dg/dg5f_contact_viz/config/: contact_thresholds.yaml  contact_thresholds_left.yaml
dg/dg5f_contact_viz/dg5f_contact_viz/: contact_monitor_node.py  contact_viz_widget.py
dg/dg5f_contact_viz/launch/: contact_viz.launch.py  contact_viz_both.launch.py  contact_viz_left.launch.py
dg/dg5f_contact_viz/test/: unit_motion_gating_test.py
dg/dg5f_finger_diag/: README.md  package.xml  setup.cfg  setup.py
dg/dg5f_finger_diag/dg5f_finger_diag/: finger_diag_node.py
dg/dg5f_hand_bringup/: CMakeLists.txt  package.xml
dg/dg5f_hand_bringup/config/: dg5f_right_bilateral.yaml
dg/dg5f_hand_bringup/launch/: dg5f_right_bringup.launch.py  dg5f_right_sim.launch.py
dg/dg5f_hand_bringup/scripts/: dg5f_sim_driver.py  install.sh
dg/dg5f_hand_bringup/test/: e2e_sim_test.py
dg/dg5f_mujoco_sim/: package.xml  setup.cfg  setup.py
dg/dg5f_mujoco_sim/config/: grasp_modes_left.yaml  grasp_modes_right.yaml
dg/dg5f_mujoco_sim/dg5f_mujoco_sim/: capture_cli.py  sim_view.py  urdf_resolver.py
manus_glove/: MANUS_SETUP.md
manus_glove/dg5f_calib_wizard/: package.xml  setup.cfg  setup.py
manus_glove/dg5f_calib_wizard/dg5f_calib_wizard/: poses.py  tuner.py  wizard.py  yaml_io.py
manus_glove/manus_dg5f_grasp_mode/: package.xml  setup.cfg  setup.py
manus_glove/manus_dg5f_grasp_mode/config/: torque_overrides_left.yaml
manus_glove/manus_dg5f_grasp_mode/launch/: teleop_with_grasp_mode_left.launch.py
manus_glove/manus_dg5f_grasp_mode/manus_dg5f_grasp_mode/: drive_signals.py  grasp_mode_node.py
manus_glove/manus_dg5f_retarget/: package.xml  setup.cfg  setup.py
manus_glove/manus_dg5f_retarget/config/: left_hand_calib.yaml  right_hand_calib.yaml
manus_glove/manus_dg5f_retarget/launch/: manus_teleop_left.launch.py  manus_teleop_right.launch.py  retarget_only.launch.py
manus_glove/manus_dg5f_retarget/manus_dg5f_retarget/: retarget_node.py  thumb_cmc.py
manus_glove/manus_dg5f_retarget/test/: e2e_coupled_test.py  e2e_teleop_test.py  unit_formula_test.py
manus_glove/manus_dg5f_sota_retarget_a/: package.xml  setup.cfg  setup.py
manus_glove/manus_dg5f_sota_retarget_a/config/: left_hand.yaml  left_hand_pad.yaml  right_hand.yaml  right_hand_pad.yaml
manus_glove/manus_dg5f_sota_retarget_a/launch/: manus_teleop_left.launch.py  manus_teleop_left_pad.launch.py  manus_teleop_right.launch.py  manus_teleop_right_pad.launch.py  retarget_only.launch.py
manus_glove/manus_dg5f_sota_retarget_a/manus_dg5f_sota_retarget_a/: contact_modulation.py  ergo_map.py  retarget_ik.py  retarget_node.py  urdf_fk.py
manus_glove/manus_dg5f_sota_retarget_a/test/: e2e_sim_sweep_test.py  unit_fk_test.py  unit_objective_test.py  unit_pad_mode_test.py  unit_pinch_convergence_test.py
manus_glove/manus_dg5f_sota_retargeting_a_good/: package.xml  setup.cfg  setup.py
manus_glove/manus_dg5f_sota_retargeting_a_good/config/: right_hand.yaml
manus_glove/manus_dg5f_sota_retargeting_a_good/launch/: manus_teleop_left.launch.py  manus_teleop_right.launch.py  retarget_only.launch.py
manus_glove/manus_dg5f_sota_retargeting_a_good/manus_dg5f_sota_retargeting_a_good/: retarget_node.py  urdf_fk.py
manus_glove/manus_dg5f_sota_retargeting_a_good/test/: e2e_sim_sweep_test.py  unit_fk_test.py  unit_objective_test.py  unit_pinch_convergence_test.py
manus_glove/manus_glove_sim/: package.xml  setup.cfg  setup.py
manus_glove/manus_glove_sim/manus_glove_sim/: manus_sim_slider.py  msg_builder.py
manus_glove/manus_ros2_msgs/: CMakeLists.txt  README.md  package.xml
manus_glove/manus_ros2_msgs/msg/: ManusVibrationCommand.msg
