<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dg5f_hand_bringup</name>
  <version>0.0.1</version>
  <description>Bringup launchers and configs for Tesollo DG5F right hand with force-feedback (effort) control.</description>
  <maintainer email="jung.ryuwoon@gmail.com">jung</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dg5f_driver</exec_depend>
  <exec_depend>dg5f_description</exec_depend>
  <exec_depend>delto_hardware</exec_depend>
  <exec_depend>dg5f_contact_viz</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>force_torque_sensor_broadcaster</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
