<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dg5f_mujoco_sim</name>
  <version>0.0.1</version>
  <description>MuJoCo kinematic sim of DG5F with Flask MJPEG viewer + grasp-mode capture CLI.</description>
  <maintainer email="jung.ryuwoon@gmail.com">LeonJung</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>dg5f_description</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>
  <!-- mujoco, flask, pillow installed via pip; not declared here. -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
