<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>manus_dg5f_retarget</name>
  <version>0.0.1</version>
  <description>Manus glove (leader) -> Tesollo DG5F (follower) retargeting node. Consumes manus_ros2_msgs/ManusGlove ergonomics and publishes control_msgs/MultiDOFCommand for the dg5f pid controller chain.</description>
  <maintainer email="jung.ryuwoon@gmail.com">jung</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>manus_ros2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
